tests/integration/lsp/text_document/snapshots/integration__lsp__text_document__formatting__bibtex_internal_join_strings.snap
---
source: tests/integration/lsp/text_document/formatting.rs
assertion_line: 107
expression: "format(r#\"\n%BIB main.bib\n%SRC @article{foo, bar = \"baz\" # \"qux\"}\"#)?"
---
@article{foo,
    bar = "baz" # "qux",
}

