tests/integration/lsp/text_document/snapshots/integration__lsp__text_document__formatting__bibtex_internal_trailing_comma.snap
---
source: tests/integration/lsp/text_document/formatting.rs
assertion_line: 74
expression: "format(r#\"\n%BIB main.bib\n%SRC @article{foo, bar = baz}\"#)?"
---
@article{foo,
    bar = baz,
}

